--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon-300x300.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stackable Cockpit</title>
   </head>
